1998-03-27  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* longalg.cc (naDBTest): fixed lines for number tests

	* added spSpolyLoop.inc to repository

	* algmap.cc (maAlgpolyMap): fixed bug which changed preimage

1998-03-23  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* taged version 1.1.7 -- unconditional fast version

	* polys-impl.cc, polys.cc: No COMP_FAST any more

	* Makefile.in: Introduced variable PERL, set by configure

	* kstdfac.cc (kStratCopy): kModW iv is not copied, but just the
	pointer is set

1998-03-18  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* Makefile.in: added Singularb target for bprof

	* polys-impl.h, polys-comp.h: Cleaned up COMP_FAST and related
	#defines 

1998-03-16  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* polys-impl.h: no #define COMP_FAST

	* configure.in,Makefile.in: check for flex -P; increased version
	number to 1.1.7

Fri Mar 13 16:16:27 MET 1998 hannes
  * fixed: Singular crashed while changing the minpoly in GF(q)
    (ipassign.cc)

Fri Mar  6 13:27:45 MET 1998 Kai Krueger <krueger@mathematik.uni-kl.de>
	* new: libparse.l,libparse.cc,utils.cc,ytils.h
	  scanner for a quick check of singular-libraries.
	* Makefile.in,mod2.h.in,iplib.cc,structs.h,subexpr.h
	  use a scanner when loading libraries.
	* grammar.y,ipassign.cc,subexpr.h
	  procinfo: added position of end of proc-definition
	            added flag for 'static'-proc (proc that can only be used
	                  in the library they are defined).
	* LIB: deform.lib,finvar.lib,hnoether.lib,normal.lib,presolve.lib
	       primdec.lib,tex.lib
	  made fixes requested by libparse (s.a. brackets, ....)
	
1998-03-04  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* febase.h: added macro assume()

	* spSpolyLoop.cc: Automatic generation of SpolyLoops using
	spSpolyLoop.pl

	* kstd*.cc: New calling interface to get SpolyLoop

	* ring.h: Introduced rOrderType_t

Mon Mar  2 16:18:25 MET 1998 hannes